# git-outlier

./: LICENSE  README.md  conan_git_log_output.txt  get_coverage.sh  outlier.py  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: python-app.yml
.tox/my_env/: .tox-config1
git_outlier/: git_outlier.py
test/: test_date_parameters.py  test_error_handling.py  test_git_integration.py  test_lizard_integration.py  test_main_integration.py  test_outlier.py  test_output_functions.py  test_plot_generation.py
