[metadata]
name = example-pkg-BjrnJhsn
version = 0.0.4
author = Example Author
author_email = author@example.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = git_outlier
python_requires = >=3.6
install_requires =
    python-dateutil
    lizard>=1.17.7

[options.entry_points]
console_scripts =
    git-outlier = git_outlier.git_outlier:main