[metadata]
name = example-pkg-BjrnJhsn
version = 0.0.5
author = Björn Johansson
author_email = bjorn.ki.johansson@gmail.com
description = Data-driven screening to find source code that may need refactoring
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BjrnJhsn/git-outlier
project_urls =
    Bug Tracker = https://github.com/BjrnJhsn/git-outlier/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = git_outlier
python_requires = >=3.6
install_requires =
    python-dateutil
    lizard>=1.17.7

[options.entry_points]
console_scripts =
    git-outlier = git_outlier.git_outlier:main